--- a/templates/Dragonslayer Greataxe.html
+++ b/templates/Dragonslayer Greataxe.html
@@ -1,57 +1,64 @@
-{% extends 'base.html' %}
-{% block title %}
-{% for slayer in list_slayer %}
-    {{slayer[0]}}
-{% endfor %}
-{% endblock %}
-
-{% block content %}
-{% for slayer in list_slayer %}
-<table class = "table table-hover table-dark" style="width: 40rem">
-    <thead>
-      <tr>
-        <th scope = "col">Strength</th>
-        <th scope = "col">Dexterity</th>
-        <th scope = "col">Intelligence</th>
-        <th scope = "col">Faith</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          <h6>{{slayer[9]}}</h6>
-        </td>
-        <td>
-            <h6>{{slayer[10]}}</h6>
-        </td>
-        <td>
-            <h6>{{slayer[11]}}</h6>
-        </td>
-        <td>
-            <h6>{{slayer[12]}}</h6>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-
-<div class="card max-auto" style="width: 12rem;">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>
+      {% for sl in list_slayer %}
+        {{sl[0]}}
+      {% endfor %}
+    </title>
     
-    <img class="card-img-top" src= "https://darksouls3.wiki.fextralife.com/file/Dark-Souls-3/{{slayer[2]}}" alt="Card image cap">
-    <div class="card-body" style = "background-color: rgba(0, 0, 0, 0);">
-      <h5 class="card-title">{{slayer[0]}}</h5>
-      <p class="card-text"></p>
-    </div>
-    <ul class="list-group list-group-flush">
-        <li class="list-group-item">Weapon Type: {{slayer[1]}}</li>
-      <li class="list-group-item">Base Damage: {{slayer[3]}}</li>
-      <li class="list-group-item">Magic Damage: {{slayer[4]}}</li>
-      <li class="list-group-item">Fire Damage: {{slayer[5]}}</li>
-      <li class="list-group-item">Lightning Damage: {{slayer[6]}}</l  i>
-      <li class="list-group-item">Dark Damage: {{slayer[7]}}</li>
-      <li class="list-group-item">Critical Strike: {{slayer[8]}}</li>
-    </ul>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
+</head>
+<body>
+  
+    <div class="main1" style="height: 2000px;background: linear-gradient(to top, rgb(0, 0, 0)100%,rgb(34, 29, 29)50%)">
+            <div class="navbar">
+                <div class="icon">
+                    <h2 class="logo">Dark Souls III</h2>
+                </div>
+
+                <div class="menu">
+                    <ul>
+                        <li><a href="{{ url_for('home_page') }}">HOME</a></li>
+                        <li><a href="{{ url_for('location_page') }}">LOCATIONS</a></li>
+                        <li><a href="{{ url_for('market_page') }}">ITEMS</a></li>
+                        <li><a href="{{ url_for('boss_page') }}">BOSSES</a></li>
+                        <li><a href="{{ url_for('npc_page') }}">NPCS</a></li>
+                        <li><a href="{{ url_for('weapons_page') }}">WEAPONS</a></li>
+                        <li><a href="{{ url_for('bsouls_page') }}">BOSS SOULS</a></li>
+                        {% if current_user.is_authenticated %}
+                        <li><a href="#" style="color:rgb(255, 255, 255)"> Welcome, {{ current_user.username }}<br></a>
+                            <a href="{{ url_for('logout_page') }}">LOGOUT</a></li>
+                        {% else %}
+                        <li><a href="{{ url_for('login_page') }}">LOGIN</a></li>
+                        {% endif %}
+                        <li><a href="{{ url_for('register_page') }}">REGISTER</a></li>
+                    </ul>
+                </div>
+        </div>
+        {% for sl in list_slayer %}
+        <div class="box3" style="height: 800px;">
+            <p style="color:aliceblue; font-size: 50px; text-align: center;">{{sl[0]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 30px; padding: 10px"><br>Type: {{sl[1]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px">Damage: {{sl[3]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px">Maigc: {{sl[4]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px">Fire: {{sl[5]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px">Lightning: {{sl[6]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px">Dark: {{sl[7]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px">Critical: {{sl[8]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px">Stength: {{sl[9]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px">Dexterity: {{sl[10]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px">Intelligence: {{sl[11]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px">Faith: {{sl[12]}}</p>
+            <div style=" display: flex; justify-content: center; align-items: center; margin-bottom: 200vh;">
+            <img src="https://darksouls3.wiki.fextralife.com/file/Dark-Souls-3/{{sl[2]}}" style="width: 200px;
+            height: 200px;object-fit: contain;">
+            </div>
+            
+          </div>
+          {% endfor %}
+
+    </div>  
     
-   
-  </div>
-  {% endfor %}
-{% endblock %}
+</body>
+</html>
