--- a/templates/Types.html
+++ b/templates/Types.html
@@ -1,28 +1,45 @@
-{% extends 'base.html' %}
+{% extends 'home.html' %}
+
 {% block title %}
-Types
+{% for type in list_type %}
+   {{type[0]}} 
+{% endfor %}
 {% endblock %}
 
 {% block content %}
-<table class = "table table-hover table-dark">
-    <thead>
-      <tr>
-        <th scope = "col">Name</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      {% for type in list_type %}
-      <tr>
-        <td>
-          <h6>{{type[0]}}</h6>
-        </td>
-      
-        <td>
-          <a class = "btn btn-outline btn-info" href = "{{ url_for('slayer_page', id=type[0]) }}">Find out More</a>
-         </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-</table>
+<!-- <div class="box1">
+  <p style="color:rgb(255, 255, 255)" class="par">Weapons in Dark Souls 3 are listed on this page.<br>
+     Players may equip up to 3 in the slots for each hand. When developing a build, the player should<br>
+      try to find the weapon that mixes the right amount of damage, bonuses and moveset, alongside<br>
+       stamina consumption and Skills. Weapon classes do not necessarily share the same skills so<br>
+        check each individual weapon page to see its specific skill. If you would like to learn more<br>
+         about each weapon, visit their page, or check out the Combat page for specific explanations<br>
+          on how to master the game. You can use this Equipment & Spell Checklist to keep track of what you have</p>
+</div> -->
+<main class="table">
+  <section class="table_header">
+    <h1>Weapon Types</h1>
+  </section>
+  <section class="table_body">
+    <table>
+      <thead>
+        <tr>
+          <th>Weapon Name</th>
+          <th>Hyperlink</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for type in list_type %}
+        <tr>
+          <td style="color: aliceblue;">{{type[0]}}</td>
+          <td style="color:aliceblue">Go to
+            <a class="link" href = "{{url_for('slayer_page', id=type[0])}}">"{{type[0]}}"</a>
+          </td>
+          
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </section>
+</main>
 {% endblock %}
