--- a/templates/boss.html
+++ b/templates/boss.html
@@ -1,42 +1,54 @@
-{% extends 'base.html' %}
-{% block title %}
-{% for boss in list_boss %}
-{{boss[0]}}
-{%endfor%}
-{% endblock %}
-
-{% block content %}
-
-{% for boss in list_boss %}
-<div class="card" style="width: 18rem;">
-
-    <img class="card-img-top" src="{{boss[3]}}" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">{{boss[0]}}</h5>
-      <p class="card-text">Found in:<ul> <li class = "nav-item active">
-        <a class = "nav-link" href = "{{url_for('irithyl_page', id=boss[1] )}}">{{ boss[1] }}</a>
-  </li></ul></p>
-    </div>
-  </div>
-  </table>
-
-  <div class="card" style="width: 18rem;">
-    <div class="card-header">
-      <p>Description and Drop:</p>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>
+      {% for boss in list_boss %}
+        {{boss[0]}}
+      {% endfor %}
+    </title>
     
-    <div class="card-body">
-      <blockquote class="blockquote mb-0">
-        <footer class="blockquote-footer" style="color:aliceblue">{{boss[4]}}</footer>
-        <footer class="blockquote-footer" style="color:aliceblue">Drops: <ul>
-            <li class = "nav-item active">
-              <a class = "nav-link" href = "{{ url_for('slayer_page', id=boss[2]) }}">{{ boss[2] }}</a>
-            </li>
-          </ul></footer>
-      </blockquote>
-     
-    </div>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
+</head>
+<body>
+    <div class="main1" style="height: 2000px;background: linear-gradient(to top, rgb(0, 0, 0)100%,rgb(34, 29, 29)50%)">
+            <div class="navbar">
+                <div class="icon">
+                    <h2 class="logo">Dark Souls III</h2>
+                </div>
 
-  </div>
-  {% endfor %}
-{% endblock %}
+                <div class="menu">
+                    <ul>
+                        <li><a href="{{ url_for('home_page') }}">HOME</a></li>
+                        <li><a href="{{ url_for('location_page') }}">LOCATIONS</a></li>
+                        <li><a href="{{ url_for('market_page') }}">ITEMS</a></li>
+                        <li><a href="{{ url_for('boss_page') }}">BOSSES</a></li>
+                        <li><a href="{{ url_for('npc_page') }}">NPCS</a></li>
+                        <li><a href="{{ url_for('weapons_page') }}">WEAPONS</a></li>
+                        <li><a href="{{ url_for('bsouls_page') }}">BOSS SOULS</a></li>
+                        {% if current_user.is_authenticated %}
+                        <li><a href="#" style="color:rgb(255, 255, 255)"> Welcome, {{ current_user.username }}<br></a>
+                            <a href="{{ url_for('logout_page') }}">LOGOUT</a></li>
+                        {% else %}
+                        <li><a href="{{ url_for('login_page') }}">LOGIN</a></li>
+                        {% endif %}
+                        <li><a href="{{ url_for('register_page') }}">REGISTER</a></li>
+                    </ul>
+                </div>
+        </div>
+        {% for boss in list_boss %}
+        <div class="box3" style="height: 1000px">
+            <p style="color:aliceblue; font-size: 50px; text-align: center;">{{boss[0]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px"><br>{{boss[4]}}</p>
+            <p style="color:rgb(255, 255, 255); font-size: 20px; padding: 10px"><br>Drops <a class="hov" href="{{url_for('slayer_page', id=boss[2])}}">{{boss[2]}}</a></p>
+            <p style="font-size: 20px; color:rgb(255, 255, 255); padding: 10px">Found in: <a class="hov" href="{{url_for('irithyl_page', id=boss[1])}}">{{boss[1]}}</a></li>
+            <div style=" display: flex; justify-content: center; align-items: center; margin-bottom: 200vh;">
+            <img src="{{boss[3]}}" style="width: 400px;
+            height: 500px;object-fit: contain;">
+            </div>
+          </div>
+          {% endfor %}
+
+    </div>  
+    
+</body>
+</html>
