--- a/templates/register.html
+++ b/templates/register.html
@@ -1,40 +1,114 @@
-{% extends 'base.html' %}
-{% block title %}
-Register Page
-{% endblock %}
+<!doctype html>
+<html lang="en">
+   <head>
+      <!-- Required meta tags -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <title>
+        {% block title %}
+            Register Page
+        {% endblock %}
+      </title>
+   </head>
+   <body>
+    
+    <!--Navbar Here-->
+    <nav class = "navbar navbar-expand-md navbar-dark bg-dark">
+        <a class = "navbar-brand" href = "{{url_for('home_page')}}">Dark Souls 3 Wiki</a>
+        <button class = "navbar-toggler" type = "button" data-toggler = "collapse" data-target = "#navbarNav">
+            <span class = "navbar-toggler-icon"></span>
+        </button>
+    </nav>
+    {% with messages = get_flashed_messages(with_categories = true) %} 
+      {% if messages %}
+        {% for category, message in messages %}
+          <div class = "alert alert-{{ category }}">
+            <button type = "button" class = "m1-2 mb-1 close" data-dismiss = "alert" aria-label = "Close">
+              <span aria-hidden = "true">&times;</span>
+            </button>
+            {{ message }}
+          </div>>
+          {% endfor %}
+      {% endif %} 
+    {% endwith %}
+    <body class="text-center">
+        <div class="container">
+            <form method="POST" class="form-register" style="color:white">
+                {{ form.hidden_tag() }}
+                <!-- #<img class="mb-4" src="https://res.cloudinary.com/jimshapedcoding/image/upload/v1597332609/android-icon-192x192_ove2a7.png" alt=""># -->
+                <h1 class="h3 mb-3 font-weight-normal">
+                    Please Create your Account
+                </h1>
+                <br>
+                {{ form.username.label() }}
+                {{ form.username(class="form-control", placeholder="User Name") }}
+    
+                {{ form.email.label() }}
+                {{ form.email(class="form-control", placeholder="Email Address") }}
+    
+                {{ form.password1.label() }}
+                {{ form.password1(class="form-control", placeholder="Password") }}
+    
+                {{ form.password2.label() }}
+                {{ form.password2(class="form-control", placeholder="Confirm Password") }}
+    
+                <br>
+    
+                <div class="checkbox mb-3">
+                    <h6>Already have an account?</h6>
+                    <a class="btn btn-sm btn-secondary" href="{{ url_for('login_page') }}">Login</a>
+                 </div>
+    
+                {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
+    
+            </form>
+        </div>
+    </body>
+    <!--Future Content Here-->
+ 
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+   </body>
+   <style>
+    #more {display: none;}
+    
+    ol {  
+    list-style-type: none;  
+    }
 
-{% block content %}
-<body class="text-center">
-    <div class="container">
-        <form method="POST" class="form-register" style="color:white">
-            {{ form.hidden_tag() }}
-            <!-- #<img class="mb-4" src="https://res.cloudinary.com/jimshapedcoding/image/upload/v1597332609/android-icon-192x192_ove2a7.png" alt=""># -->
-            <h1 class="h3 mb-3 font-weight-normal">
-                Please Create your Account
-            </h1>
-            <br>
-            {{ form.username.label() }}
-            {{ form.username(class="form-control", placeholder="User Name") }}
+    ul {  
+    list-style-type: none;   
+    }  
 
-            {{ form.email.label() }}
-            {{ form.email(class="form-control", placeholder="Email Address") }}
+    body {
+    background-color: #212121;
+    color: white
+    }
 
-            {{ form.password1.label() }}
-            {{ form.password1(class="form-control", placeholder="Password") }}
+    a {
+    color: #2854da;
+    text-decoration: none;
+    }
 
-            {{ form.password2.label() }}
-            {{ form.password2(class="form-control", placeholder="Confirm Password") }}
+    a:hover {
+        color:#324b9b; 
+        text-decoration:none; 
+        cursor:pointer;  
+    }
 
-            <br>
+    .card {
+      background-color: #51515100;
+      display: inline-block
+    }
 
-            <div class="checkbox mb-3">
-                <h6>Already have an account?</h6>
-                <a class="btn btn-sm btn-secondary" href="{{ url_for('login_page') }}">Login</a>
-             </div>
-
-            {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
-
-        </form>
-    </div>
-</body>
-{% endblock %}
+    .list-group-item {
+      background-color: #212121;
+    }
+   </style>
+</html>
